# local-note

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  README.md  TROUBLESHOOTING.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: Complete_Developer_Guide.md  GETTING_STARTED.md  README.md  RESOURCES_SUMMARY.md  WEEKLY_CHECKPOINTS.md  دليل_المطور_الكامل.md
src/local_note/: __init__.py  __main__.py
tests/: test_basic.py
