[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-note"
version = "0.1.0"
description = "Local Markdown Knowledge Base | قاعدة معارف Markdown محلية"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Local Note Team"}
]
keywords = ["markdown", "notes", "knowledge-base", "offline"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "customtkinter>=5.2.0",
    "markdown>=3.5.0",
    "python-bidi>=0.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pylint>=3.0.0",
    "black>=23.12.0",
    "mypy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/AhmadMansy/local-note"
Documentation = "https://github.com/AhmadMansy/local-note/blob/main/docs/README.md"
Repository = "https://github.com/AhmadMansy/local-note"
Issues = "https://github.com/AhmadMansy/local-note/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
